--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: ShellCheck
-      - uses: ludeeus/action-shellcheck@1.1.0
+        uses: ludeeus/action-shellcheck@1.1.0
       
       
       # Runs a single command using the runners shell
